# SoundImageConverter

./: CMakeLists.txt  README
include/SoundImageConverter/: Converter.h  Encoder.h
src/: Decoder.cpp  Encoder.cpp  main.cpp
